...
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/title_text_view"
            app:layout_constraintWidth_max="300dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/card_number_input"
            style="@style/Widget.App.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            app:layout_constraintBottom_toTopOf="@id/nav_btn"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/subtitle_text_view"
            app:layout_constraintVertical_bias="0.07">

            <com.kryptkode.cardinfofinder.util.customview.card.CardNumberEditText
                android:id="@+id/card_number_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="creditCardNumber"
                android:hint="@string/card_number_hint" />

        </com.google.android.material.textfield.TextInputLayout>
...
