...
    <string name="bt_cid">CID</string>
    <string name="bt_cvn">CVN</string>

    <string name="bt_card_number_required">Card number is required</string>
    <string name="bt_card_number_invalid">Card number is invalid</string>
    <string name="action_next">Next</string>
    <string name="card_number_invalid_message">Please enter a valid card number</string>
    <string name="title_card_country">Country</string>
    <string name="image_location_cd">Location icon</string>
    <string name="title_card_bank">Bank</string>
    <string name="image_bank_cd">Bank icon</string>
    <string name="title_card_details">Card Info</string>
    <string name="image_card_cd">Card icon</string>
...
